--- a/src/components/Preloader.css
+++ b/src/components/Preloader.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: #F8F3EC; /* Clean off-white background */
   z-index: 9999;
