--- a/src/pages/TravelGuide.css
+++ b/src/pages/TravelGuide.css
@@ -91,7 +91,7 @@
 /* Mobile Responsiveness */
 @media (max-width: 768px) {
   .travel-guide-page {
-    padding-top: 100px;
+    padding-top: 150px;
     padding-bottom: 40px;
   }
 
